--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
